--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.2.3'
+    gmsPlayService = '17.0.0'
+    archLifecycleVersion = '2.2.0-rc03'
+}
