--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapActivity"/>
+        <service android:name=".roomDB.UpdateDatabaseService"/>
     </application>
 
 </manifest>
