Добавили проверку на интернет и WIFI БД обновляется в WorkManager Добавленно напоминание о фильме

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.hfad.myfilmsearcher">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:usesCleartextTraffic="true"
@@ -13,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA43ZBsSquDZMUZJPs_IWTeHx6A2LxZK3E" />
@@ -25,8 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity"/>
-        <service android:name=".roomDB.UpdateDatabaseService"/>
+        <activity android:name=".CinemaInternet.MapActivity"/>
+       <!-- <service android:name=".roomDB.UpdateDatabaseService"/>-->
+        <receiver android:name=".receivers.RemindReceiver"/>
+
     </application>
 
 </manifest>
